# template-python-llama-index-langchain-starter

./: .coveragerc  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CONTRIBUTING.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
outputs/medical_test_data/: synth-test-1.json  synth-test-2.json
template_gen_ai_project/: main.py  settings.py  test_main.py
template_gen_ai_project/examples/: llama_index_structured_outputs_llm_response.py  medical_test_data_extraction.py  simple-llama-index-neo4j-graph.py  simple-llama-index-property-graph.py  simple_llama_index_azure_query.py  simple_llama_index_llm_invoke.py
template_gen_ai_project/examples/graph-examples/deprecated-methods/: llama-index-knowledge-graph-query-engine.py  query-llama-index-KnowledgeGraphRAGRetriever.py
template_gen_ai_project/examples/graph-examples/handbook/: ingestion.py  query.py
template_gen_ai_project/examples/medical_test_data/: ingestion_medical_test_data_extraction.py  retriever_medical_test_data.py
template_gen_ai_project/helpers/: embeddings.py  llm_helper.py  logger_helper.py
template_gen_ai_project/tasks/: tasks.py
