[tool.poetry]
name = "template_gen_ai_project"
version = "0.1.0"
description = "A template repo for modern python FastAPI apps build with LLamaIndex and LangChain"
authors = ["chrishart0 <64378248+chrishart0@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
llama_index = "^0.12.10"                              # https://pypi.org/project/llama-index/
llama-index-vector-stores-neo4jvector = "^0.3.0"     # https://pypi.org/project/llama-index-vector-stores-neo4jvector/
llama-index-graph-stores-neo4j = "^0.4.5"            # https://pypi.org/project/llama-index-graph-stores-neo4j/
llama-index-readers-wikipedia = "^0.3.0"             # https://pypi.org/project/llama-index-readers-wikipedia/
llama-index-llms-azure-openai = "^0.3.0"             # https://pypi.org/project/llama-index-readers-wikipedia/
llama-index-embeddings-azure-openai = "^0.3.0"       # https://pypi.org/project/llama-index-embeddings-azure-openai/
llama-index-embeddings-huggingface = "^0.5.0"        # https://pypi.org/project/llama-index-embeddings-huggingface/
openinference-instrumentation-llama-index = "^3.1.3" # https://pypi.org/project/openinference-instrumentation-llama-index/
arize-phoenix-otel = "0.6.1"                         # https://pypi.org/project/arize-phoenix-otel/
openai = "1.59.7"                                    # https://pypi.org/project/openai/
langchain = "0.3.14"                                 # https://pypi.org/project/langchain/
langchain-openai = "^0.3.0"                          # https://pypi.org/project/langchain-openai/
langchain-community = "^0.3.14"                      # https://pypi.org/project/langchain-ollama/
langchain-ollama = "^0.2.2"                          # https://pypi.org/project/langchain-ollama/
requests = "^2.32.3"                                 # https://pypi.org/project/requests/ 
pydantic = "^2.10.5 "                                # https://pypi.org/project/pydantic/
pydantic-settings = "^2.7.1"                         # https://pypi.org/project/pydantic-settings/
loguru = "^0.7.3"                                    # https://pypi.org/project/loguru/
fastapi = "^0.115.6"                                 # https://pypi.org/project/fastapi/
uvicorn = "^0.34.0"                                  # https://pypi.org/project/uvicorn/
rq = "^2.0.0"
pdfplumber = "^0.11.4"
neo4j = "^5.27.0"
wikipedia = "^1.4.0"
torch = "^2.5.1"
transformers = "^4.48.0"
python-pptx = "^1.0.2"
pillow = "^11.1.0"
einops = "^0.8.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"         # https://pypi.org/project/pre-commit/
black = "^24.10.0"            # https://pypi.org/project/black/
flake8 = "^7.1.1"             # https://pypi.org/project/flake8/
pytest = "^8.3.3"             # https://pypi.org/project/pytest/
pytest-cov = "^5.0.0"         # https://pypi.org/project/pytest-cov/
detect-secrets = "^1.5.0"     # https://pypi.org/project/detect-secrets/

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
